alignment fix to bell curve

--- a/index.css
+++ b/index.css
@@ -813,7 +813,7 @@ body section .about-company-wrapper .average-economy-wrapper .average-economy-co
   max-width: 820px;
   width: 100%;
   margin-top: -305px;
-  margin-right: 0;
+  margin-right: -10%;
   position: relative;  
 }
 
